overseerr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: overseerr
  name: overseerr
  namespace: servarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: overseerr
  template:
    metadata:
      labels:
        app: overseerr
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: overseerr-cm
        image: ghcr.io/seerr-team/seerr
        imagePullPolicy: Always
        name: overseerr
        ports:
        - containerPort: 5055
          protocol: TCP
        securityContext:
          runAsUser: 1000
        volumeMounts:
        - mountPath: /app/config
          name: overseerr-data
      volumes:
        - persistentVolumeClaim:
            claimName: overseerr
          name: overseerr-data
