overseerr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: overseerr
  name: overseerr
  namespace: servarr
spec:
  ports:
    - name: "web"
      port: 5055
      targetPort: 5055
  selector:
    app: overseerr
  type: ClusterIP
